fixes menuwraper position

--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -124,7 +124,7 @@
   padding: 10px;
   position: absolute;
   top: 22px;
-  right: -53px;
+  right: -222px;
   width: 145px;
 }
 
